change questions tags in html

--- a/src/app/features/admin-panel/components/single-select/single-select.component.html
+++ b/src/app/features/admin-panel/components/single-select/single-select.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="form">
     <div class="questionInput" formArrayName="{{ inquiryFormName.QUESTIONS }}">
       <div class="row" align="center" [formGroupName]="itemIndex">
-        <span class="questionMargin">Question no. {{ 1 }}</span>
+        <span class="questionMargin">Question no. {{ itemIndex + 1 }}</span>
         <mat-form-field appearance="outline" class="questionInputWidth">
           <mat-label>Text of the Question</mat-label>
           <input matInput type="text" formControlName="{{ singleSelectQuestionFormName.QUESTION }}" />
