change name of inquiry form input

--- a/src/app/features/admin-panel/components/inquiry-form/inquiry-form/inquiry-form.component.html
+++ b/src/app/features/admin-panel/components/inquiry-form/inquiry-form/inquiry-form.component.html
@@ -2,7 +2,7 @@
   <ng-container [formGroup]="inquiryForm">
     <div class="headInput">
       <mat-form-field class="headInputWidth" appearance="outline">
-        <mat-label>Nazwa ankiety</mat-label>
+        <mat-label>Inquiry name</mat-label>
         <input matInput type="text" formControlName="{{ inquiryFormName.INQUIRY_NAME }}" />
       </mat-form-field>
     </div>
