--- a/src/app/features/admin-panel/components/inquiry-table-list/inquiry-table-list.component.html
+++ b/src/app/features/admin-panel/components/inquiry-table-list/inquiry-table-list.component.html
@@ -22,6 +22,7 @@
           <button class="button" color="basic" mat-raised-button (click)="editInquiry(element.id)" [disabled]="sessionStorageUser === accountsToken.USER_TOKEN">Edit</button>
           <button class="button" color="accent" mat-raised-button >View scores</button>
           <button class="button" color="warn" mat-raised-button (click)="deleteInquiry(element.id)" [disabled]="sessionStorageUser === accountsToken.USER_TOKEN">Delete</button>
+          <button class="button" color="primary" mat-raised-button (click)="fillInquiry(element.id)" >Fill inquiry</button>
         </div>
       </td>
     </ng-container>
