--- a/src/app/features/admin-panel/containers/dashboard-panel-container/dashboard-panel-container.component.html
+++ b/src/app/features/admin-panel/containers/dashboard-panel-container/dashboard-panel-container.component.html
@@ -2,5 +2,5 @@
   <div class="menu">
     <button class="button" color="primary" mat-raised-button (click)="openInquiryForm()" [disabled]="sessionStorageUser === accountsToken.USER_TOKEN">Add inquiry</button>
   </div>
-  <inq-inquiry-table-list (editInquiryEvent)="openInquiryForm($event)"></inq-inquiry-table-list>
+  <inq-inquiry-table-list (editInquiryEvent)="openInquiryForm($event)" (fillInquiryEvent)="openInquiryFormToFill($event)"></inq-inquiry-table-list>
 </div>
