--- a/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
+++ b/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
@@ -1,6 +1,30 @@
 @if (sessionStorageUser === accountsToken.USER_TOKEN) {
   <div class="container">
-    <div class="menu"></div>
+    <div class="setButtons">
+      <div class="rowWidth"></div>
+      <mat-card class="setMatCartContent">
+        <div class="setMat">
+          <div class="setUserInfo">
+            <div>
+              <div class="title">Your profile info</div>
+              <div><span>Inquiries to accomplish:</span></div>
+              <div>
+                <span>Failed: {{ 'o' }} within last 1 months</span>
+              </div>
+              <div>
+                <span>Your local time: {{ clock() }}</span>
+              </div>
+            </div>
+          </div>
+
+          <div class="setImageRow">
+            <div class="cardImage"></div>
+            <p class="setImageRowText">{{ userType }}</p>
+          </div>
+        </div>
+      </mat-card>
+      <button class="button-63" (click)="logOut()"><mat-icon fontIcon="logout"></mat-icon>&nbsp;Log out</button>
+    </div>
     <inq-inquiry-table-list-user (fillInquiryEvent)="openInquiryFormToFill($event)"></inq-inquiry-table-list-user>
   </div>
 }
