--- a/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.css
+++ b/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.css
@@ -32,10 +32,23 @@
 
 .table{
     box-shadow: 2px 2px 2px 2px rgb(189, 187, 207);
+    border-radius: 20px !important;
+
 }
 
 .borderTitle{
   width: 30%;
+}
+
+.gh{
+  background-image: linear-gradient(180, #edf1f7 250%, #ffffff, #ffffff,#cfdae9);
+  box-shadow: 1px 8px 10px 10px rgb(163, 191, 217);
+  border-radius: 12px !important;
+}
+
+.header{
+  background-image: linear-gradient(180deg, #ffffff, #ffffff, #ffffff,#D9DEF0 0%);
+  box-shadow: 1px 8px 10px 10px rgb(163, 191, 217);
 }
 
 
