--- a/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.html
+++ b/src/app/features/pollster-panel/components/inquiry-table-list/inquiry-table-list.component.html
@@ -26,7 +26,7 @@
       </td>
     </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+    <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns" class="gh"></tr>
   </table>
 </div>
