--- a/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
+++ b/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
@@ -12,7 +12,7 @@
                 <span>Failed: {{ 'o' }} within last 1 months</span>
               </div>
               <div>
-                <span>Your local time: {{ clock() }}</span>
+                <span>Your local time: {{ timeActual }} </span>
               </div>
             </div>
           </div>
