--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.css
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.css
@@ -67,7 +67,7 @@
   & .title {
     width: 580px;
     font-size: 14px;
-    background-image: linear-gradient(45deg, #A3BFD9 30%, #DCE2F2, #DCE2F2);
+    background-image: linear-gradient(45deg, #A2BDDC 30%, #DCE2F2, #DCE2F2);
     border-radius: 5px;
     /* box-shadow: 0px 1px 1px 1px #A3BFD9; */
   padding-top: 3px;
