--- a/src/app/features/user-panel/components/inquiry-table-list-user/inquiry-table-list-user.component.html
+++ b/src/app/features/user-panel/components/inquiry-table-list-user/inquiry-table-list-user.component.html
@@ -25,8 +25,8 @@
         </td>
       </ng-container>
   
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+      <tr mat-header-row *matHeaderRowDef="displayedColumns" class="teableHeader"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns" class="tableRow"></tr>
     </table>
   </div>
   
