--- a/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
+++ b/src/app/features/user-panel/containers/user-panel-container/user-panel-container.component.html
@@ -25,6 +25,6 @@
       </mat-card>
       <button class="button-63" (click)="logOut()"><mat-icon fontIcon="logout"></mat-icon>&nbsp;Log out</button>
     </div>
-    <inq-inquiry-table-list-user (fillInquiryEvent)="openInquiryFormToFill($event)"></inq-inquiry-table-list-user>
+    <inq-inquiry-table-list-user (openInquiryFormToFillEvent)="openInquiryFormToFill($event)"></inq-inquiry-table-list-user>
   </div>
 }
