chane enums,create hmtl files

--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
@@ -15,7 +15,7 @@
   <div class="matDialogActions">
     <mat-dialog-actions align="end">
       <button class="buttonCustom" mat-button mat-dialog-close>Cancel</button>
-      <button class="buttonCustom" mat-button mat-dialog-close>Save</button>
+      <button class="buttonCustom" mat-button mat-dialog-close (click)="saveAnswerForm()">Save</button>
     </mat-dialog-actions>
   </div>
 </div>
