--- a/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
+++ b/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
@@ -6,15 +6,17 @@
     <span class="questionSpan">{{ questionName }}</span>
   </div>
   <form [formGroup]="form">
-    <div formArrayName="{{ inquiryFormName.ANSWERS }}">
+    <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}" class="answers">
       <div [formGroupName]="indexItem">
         <div formArrayName="{{ multiSelectAnswerFormName.ANSWERS }}" class="answers">
           @for (answer of answersFormArray.controls; track $index) {
-            <div class="d-flex row answers">
-              <mat-checkbox class="matCheckbox"></mat-checkbox>
-              <mat-form-field appearance="outline" class="answerInputWidth">
-                <input matInput type="text" formControlName="{{ $index }}" class="disabled" />
-              </mat-form-field>
+            <div [formGroupName]="$index">
+              <div class="d-flex row answers">
+                <mat-checkbox class="matCheckbox" formControlName="{{ 'isSelected' }}"></mat-checkbox>
+                <mat-form-field appearance="outline" class="answerInputWidth">
+                  <input matInput type="text" formControlName="{{ 'label' }}" class="disabled" />
+                </mat-form-field>
+              </div>
             </div>
           }
         </div>
@@ -22,4 +24,3 @@
     </div>
   </form>
 </div>
-
