--- a/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
+++ b/src/app/features/pollster-panel/containers/pollster-panel/pollster-panel-container.component.html
@@ -31,6 +31,7 @@
       <inq-inquiry-table-list-pollster
         (editInquiryEvent)="openInquiryForm($event)"
         (fillInquiryEvent)="openInquiryForm($event)"
+        (deleteInquiryEvent)="showDeleteToastr($event)"
       ></inq-inquiry-table-list-pollster>
     </div>
   </div>
