--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.html
@@ -7,7 +7,7 @@
       @for (answer of formArrayControls.controls; track $index) {
         <inq-multiselect-answer [item]="answer" [indexItem]="$index"></inq-multiselect-answer>
         <inq-scale-answer></inq-scale-answer>
-        <inq-shortquestion-answer></inq-shortquestion-answer>
+        <inq-shortquestion-answer [item]="answer" [itemIndex]="$index"></inq-shortquestion-answer>
         <inq-singleselect-answer></inq-singleselect-answer>
       }
     </div>
