--- a/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
+++ b/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.html
@@ -1,1 +1,17 @@
-
+@if (isViewed) {
+  <form [formGroup]="form">
+    <div class="questionInput" formArrayName="{{ inquiryAnswersFormName.ANSWERS }}">
+      <div class="row" align="center" [formGroupName]="itemIndex">
+        <span class="questionMargin">Question no. {{ itemIndex + 1 }}</span>
+        <mat-form-field appearance="outline" class="questionInputWidth">
+          <mat-label>Text of the Question</mat-label>
+          <input matInput type="text" formControlName="{{ shortTextQuestionAnswerFormName.QUESTION }}" />
+        </mat-form-field>
+        <mat-form-field appearance="outline" class="answerInputWidth">
+          <mat-label>Text of the Answer</mat-label>
+          <input matInput type="text" formControlName="answer" />
+        </mat-form-field>
+      </div>
+    </div>
+  </form>
+}
