odifying ccs file in sclae components

--- a/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.css
+++ b/src/app/features/user-panel/components/inquiry-form-to-fill/inquiry-form-to-fill.component.css
@@ -5,6 +5,7 @@
   text-align: center;
   justify-content: center;
   font-family: Roboto, sans-serif;
+  background-color: rgba(220, 226, 242, 1) !important;
 }
 
 .title {
