--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
@@ -59,7 +59,7 @@
   margin-right: 30%;
   border-radius: 8px;
   background-image: linear-gradient(25deg, #DDE8F9 10%, #a6b9d8 , #DDE8F9);
-  box-shadow: 5px 0px 5px 0px #a6b9d8;
+  box-shadow: 5px 5px 5px 0px #a6b9d8;
   padding: 8px;
   width: 35%;
 }
@@ -93,7 +93,10 @@
   }
 
 
-  .my_class{
-    font-size: 20px;
+  .sliderMaxValue {
+    color: red;
+  }
+  .textUnderline {
+    text-decoration: underline;
   }
 }
