--- a/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.css
+++ b/src/app/features/user-panel/components/shortquestion-answer/shortquestion-answer.component.css
@@ -13,5 +13,23 @@
 }
 
 .answerInputWidth {
-  width: 300px;
+  width: 500px;
 }
+
+.question {
+  font-size: 18px;
+} 
+.questionContent {
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 6px;
+  background-image: linear-gradient(180deg, #dce2f2, #f4f4fc 400%, #a2bddc);
+  box-shadow: 0px 0px 2px 2px #a3bfd9;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  width: 80%;
+  justify-content: center;
+}
+
+
