--- a/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
+++ b/src/app/features/user-panel/components/multiselect-answer/multiselect-answer.component.html
@@ -13,9 +13,9 @@
             @for (answer of answersFormArray.controls; track $index) {
               <div [formGroupName]="$index">
                 <div class="d-flex row answers">
-                  <mat-checkbox class="matCheckbox" formControlName="{{ 'isSelected' }}"></mat-checkbox>
+                  <mat-checkbox class="matCheckbox" formControlName="{{ multiSelectAnswerFormName.IS_SELECTED }}"></mat-checkbox>
                   <mat-form-field appearance="outline" class="answerInputWidth">
-                    <input matInput type="text" formControlName="{{ 'label' }}" class="disabled" />
+                    <input matInput type="text" formControlName="{{ multiSelectAnswerFormName.LABEL }}"/>
                   </mat-form-field>
                 </div>
               </div>
