--- a/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
+++ b/src/app/features/user-panel/components/scale-answer/scale-answer.component.css
@@ -1,3 +1,19 @@
+.question {
+  font-size: 18px;
+}
+.questionContent {
+  font-size: 16px;
+  font-weight: 400;
+  border-radius: 6px;
+  background-image: linear-gradient(180deg, #dce2f2, #f4f4fc 400%, #a2bddc);
+  box-shadow: 0px 0px 2px 2px #a3bfd9;
+  padding: 10px;
+  margin: 10px;
+  display: inline-block;
+  width: 80%;
+  justify-content: center;
+}
+
 .headInput {
   text-align: center;
   margin-top: 20px;
@@ -58,7 +74,7 @@
   margin-left: 30%;
   margin-right: 30%;
   border-radius: 8px;
-  background-image: linear-gradient(25deg, #DDE8F9 10%, #a6b9d8 , #DDE8F9);
+  background-image: linear-gradient(25deg, #dde8f9 10%, #a6b9d8, #dde8f9);
   box-shadow: 5px 5px 5px 0px #a6b9d8;
   padding: 8px;
   width: 35%;
@@ -91,12 +107,10 @@
     border-bottom-left-radius: 8px;
     border-bottom-right-radius: 8px;
   }
-
-
-  .sliderMaxValue {
-    color: red;
-  }
-  .textUnderline {
-    text-decoration: underline;
-  }
+}
+.sliderMaxValue {
+  color: red;
+}
+.textUnderline {
+  text-decoration: underline;
 }
